<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tittle_banner"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_biru_greet_left"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/logout_banner"
        app:layout_constraintEnd_toStartOf="@id/logout_banner">

        <TextView
            android:id="@+id/tittleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/monitoring"
            android:fontFamily="sans-serif-medium"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logout_banner"
        android:layout_width="80dp"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_biru_greet_right"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/daftar_user">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logoutBtn"
            android:layout_width="38dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_logout"
            app:backgroundTint="@null"
            app:iconTint="@null"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/daftar_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daftar_user"
        android:fontFamily="sans-serif-medium"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/main_card"
        app:layout_constraintStart_toStartOf="@id/main_card" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_card"
        android:layout_width="360dp"
        android:layout_height="500dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_putih_card"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@id/imgAward"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tittle_banner"
        app:layout_constraintVertical_bias="0">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        </androidx.recyclerview.widget.RecyclerView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imgAward"
        android:layout_width="330dp"
        android:layout_height="160dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/award"
        android:scaleType="centerCrop"
        android:src="@drawable/award"
        app:layout_constraintTop_toBottomOf="@id/main_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>
